<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_logo_intro"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginTop="@dimen/l_margin"
            android:layout_marginBottom="@dimen/l_margin"
            android:src="@drawable/ic_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_intro_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_margin"
            android:text="@string/intro_text"
            android:textAlignment="center"
            android:textSize="@dimen/xxl_font"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_intro_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginBottom="@dimen/l_margin"
            android:text="@string/intro_caption"
            android:textAlignment="center"
            android:textColor="@color/light_blue_grey"
            android:textSize="@dimen/l_font" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_shopnow"
            style="@style/GreenRoundedButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/l_margin"
            android:padding="@dimen/m_margin"
            android:text="@string/shop_now"
            android:textAlignment="center"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            style="@style/LighterGreenRoundedButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/l_margin"
            android:drawableStart=""
            android:padding="@dimen/m_margin"
            android:text="@string/sing_in"
            android:textAlignment="center"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>